--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet'/>
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="shortcut icon" href="../assets/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
     <title>Cosa si scrocca oggi?</title>
 </head>
 <body>
     <div class="topnav hidden-nav">
-        <a href="../index.html" class="nav-title">Guida fuorisalone :) 🍹</a>
+        <a href="index.html" class="nav-title">Guida fuorisalone :) 🍹</a>
     </div>
 
     <div class="map-container flex-display-center-center">
