Begin of filtering (event type)

--- a/index.html
+++ b/index.html
@@ -16,22 +16,42 @@
     </div>
 
     <div class="map-container flex-display-center-center">
-        <div class="side-bar sb-left">
-            <a href="../destinations/boracay.html">
-                <div class="city-card">
-                Boracay - Philippines <br> <br>
-                <span><div class="time">443 days</div> of waiting time </span> <br> 
-                POLLUTION
-                </div>
-            </a>
-        </div>
+            <!-- <div class="side-bar sb-left">
+                <a href="../destinations/boracay.html">
+                    <div class="city-card">
+                    Boracay - Philippines <br> <br>
+                    <span><div class="time">443 days</div> of waiting time </span> <br> 
+                    POLLUTION
+                    </div>
+                </a>
+            </div> -->
 
-        <div class="buttons flex-display-center-sb">
-            <div class="list-btn pointer animated-btn btn-text sans-regular flex-display-center-center">
-                Show list
-                <img src="../assets/arrow.svg" class="arrow"></img>
+            <div class="buttons flex-display-center-sb">
+                <div class="list-btn pointer animated-btn btn-text sans-regular flex-display-center-center">
+                    Filters
+                    <img src="../assets/arrow.svg" class="arrow"></img>
+                </div>
             </div>
-        </div>
+
+            <div class="checkbox-container">
+                <div class="checkbox pointer">
+                    <label class="switch pointer">
+                        <input type="checkbox" id="checky">
+                        <span class="checkbox-slider"></span>
+                    </label>
+                </div>
+                
+                <div class="checkbox pointer">
+                    <label class="switch pointer">
+                        <input type="checkbox" id="scrocco">
+                        <span class="checkbox-slider"></span>
+                        Scrocco
+                    </label>
+                </div>
+
+                    <!-- <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+                    <label for="vehicle3"> I have a boat</label> -->
+            </div>
 
         <div id='map'></div>
     </div>
