Week filter (monday)

--- a/index.html
+++ b/index.html
@@ -26,18 +26,27 @@
                 </a>
             </div> -->
 
-            <div class="buttons flex-display-center-sb">
+            <!-- <div class="buttons flex-display-center-sb">
                 <div class="list-btn pointer animated-btn btn-text sans-regular flex-display-center-center">
                     Filters
                     <img src="../assets/arrow.svg" class="arrow"></img>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="checkbox-container">
+            <div class="checkbox-container flex-display-center-sb">
                 <div class="checkbox pointer">
                     <label class="switch pointer">
-                        <input type="checkbox" id="checky">
+                        <input type="checkbox" id="design">
                         <span class="checkbox-slider"></span>
+                        Design
+                    </label>
+                </div>
+                
+                <div class="checkbox pointer">
+                    <label class="switch pointer">
+                        <input type="checkbox" id="serata">
+                        <span class="checkbox-slider"></span>
+                        Serata
                     </label>
                 </div>
                 
@@ -49,8 +58,12 @@
                     </label>
                 </div>
 
-                    <!-- <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-                    <label for="vehicle3"> I have a boat</label> -->
+
+                <div>
+                    <input type="checkbox" id="monday" name="monday" value="monday">
+                    <label for="monday"> Lunedì </label>
+                </div>
+
             </div>
 
         <div id='map'></div>
