--- a/index.html
+++ b/index.html
@@ -59,36 +59,44 @@
                             Scrocco
                         </label>
                     </div>
+                    
+                    <div class="checkbox pointer">
+                        <label class="switch pointer">
+                            <input type="checkbox" id="Altro" class="control" checked>
+                            <span class="checkbox-slider"></span>
+                            Altro
+                        </label>
+                    </div>
                 </div>
 
                 <div class="weekday flex-display-center-sb">
                     <div>
-                        <input type="checkbox" id="monday" name="monday" class="weekControl" checked>
-                        <label for="monday"> Lunedì </label>
+                        <input type="checkbox" id="monday" name="monday" class="weekControl" value="15/04/2024" checked>
+                        <label for="monday"> Mon </label>
                     </div>
                     <div>
-                        <input type="checkbox" id="tuesday" name="tuesday" class="weekControl" checked>
-                        <label for="tuesday"> Martedì </label>
+                        <input type="checkbox" id="tuesday" name="tuesday" class="weekControl" value="16/04/2024" checked>
+                        <label for="tuesday"> Tue </label>
                     </div>
                     <div>
-                        <input type="checkbox" id="wednesday" name="wednesday" class="weekControl" checked>
-                        <label for="wednesday"> Mercoledì </label>
+                        <input type="checkbox" id="wednesday" name="wednesday" class="weekControl" value="17/04/2024" checked>
+                        <label for="wednesday"> Wed </label>
                     </div>
                     <div>
-                        <input type="checkbox" id="thursday" name="thursday" class="weekControl" checked>
-                        <label for="thursday"> Giovedì </label>
+                        <input type="checkbox" id="thursday" name="thursday" class="weekControl" value="18/04/2024" checked>
+                        <label for="thursday"> Thu </label>
                     </div>
                     <div>
-                        <input type="checkbox" id="friday" name="friday" class="weekControl" checked>
-                        <label for="friday"> Venerdì </label>
+                        <input type="checkbox" id="friday" name="friday" class="weekControl" value="19/04/2024" checked>
+                        <label for="friday"> Fri </label>
                     </div>
                     <div>
-                        <input type="checkbox" id="saturday" name="saturday" class="weekControl" checked>
-                        <label for="saturday"> Sabato </label>
+                        <input type="checkbox" id="saturday" name="saturday" class="weekControl" value="20/04/2024" checked>
+                        <label for="saturday"> Sat </label>
                     </div>
                     <div>
-                        <input type="checkbox" id="sunday" name="sunday" class="weekControl" checked>
-                        <label for="sunday"> Domenica </label>
+                        <input type="checkbox" id="sunday" name="sunday" class="weekControl" value="21/04/2024" checked>
+                        <label for="sunday"> Sun </label>
                     </div>
                 </div>
 
