--- a/index.html
+++ b/index.html
@@ -60,13 +60,17 @@
                         </label>
                     </div>
                     
-                    <div class="checkbox pointer">
+                    <!-- <div class="checkbox pointer">
                         <label class="switch pointer">
                             <input type="checkbox" id="Altro" class="control" checked>
                             <span class="checkbox-slider"></span>
                             Altro
                         </label>
-                    </div>
+                    </div> -->
+                    <!-- <div>
+                        <input type="checkbox" id="Scrocco" class="control" checked>
+                        <label> Scrocco </label>
+                    </div> -->
                 </div>
 
                 <div class="weekday flex-display-center-sb">
