--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="checkbox pointer">
                     <label class="switch pointer">
                         <input type="checkbox" id="Design" class="control" checked>
-                        <span class="checkbox-slider"></span>
+                        <span class="checkbox-slider giallo"></span>
                         Design
                     </label>
                 </div>
@@ -30,7 +30,7 @@
                 <div class="checkbox pointer">
                     <label class="switch pointer">
                         <input type="checkbox" id="Serata" class="control" checked>
-                        <span class="checkbox-slider"></span>
+                        <span class="checkbox-slider aqua"></span>
                         Serata
                     </label>
                 </div>
