--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="topnav hidden-nav">
-        <a href="index.html" class="nav-title">Guida fuorisalone :) Super obvious change</a>
+        <a href="index.html" class="nav-title">Guida fuorisalone :) I want now to delete this and have a dedicated text</a>
     </div>
 
     <div class="map-container flex-display-center-center">
