--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="weekday flex-display-center-sb">
                 <div>
                     <input type="checkbox" id="monday" name="monday" class="weekControl" value="15/04/2024" checked>
-                    <label for="monday"> Mon </label>
+                    <label for="monday"> Montag ja heute sprechen wir DE </label>
                 </div>
                 <div>
                     <input type="checkbox" id="tuesday" name="tuesday" class="weekControl" value="16/04/2024" checked>
