Reverted changes for presentation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="topnav hidden-nav">
-        <a href="index.html" class="nav-title">Guida fuorisalone :) I want now to delete this and have a dedicated text</a>
+        <a href="index.html" class="nav-title">Guida fuorisalone :)</a>
     </div>
 
     <div class="map-container flex-display-center-center">
@@ -51,7 +51,7 @@
             <div class="weekday flex-display-center-sb">
                 <div>
                     <input type="checkbox" id="monday" name="monday" class="weekControl" value="15/04/2024" checked>
-                    <label for="monday"> Montag ja heute sprechen wir DE </label>
+                    <label for="monday"> Mon </label>
                 </div>
                 <div>
                     <input type="checkbox" id="tuesday" name="tuesday" class="weekControl" value="16/04/2024" checked>
