--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet'/>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
-    <title>Cosa si scrocca oggi?</title>
+    <title>I migliori eventi del fuorisalone 2024</title>
 </head>
 <body>
     <div class="topnav hidden-nav">
