Clustering ok, buttons need adjustments

--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
             container: 'map',
             style: 'mapbox://styles/mapbox/dark-v10',
             center:[9.19547994071335, 45.47106013361857],
-            zoom: 10
+            zoom: 13,
+            maxZoom: 15
         });
         this.map.once('load', () => {
             this.map.resize()
