--- a/list.html
+++ b/list.html
@@ -16,7 +16,7 @@
         <a href="about.html" class="nav-title underlined">ABOUT</a>
     </div>
 
-    <div class="ui-elements-container z-10 flex-display-center-start g-l column">
+    <div class="ui-elements-container z-10 flex-display-center-start column g-s" style="background-color: var(--violet);">
         <div class="filter-button-container z-10 flex-display-center-center g-m">
             <div class="filter-btn filter-event-type pill pointer flex-display-center-center" id="event-type">Event category</div>
             <div class="filter-btn filter-date pill pointer flex-display-center-center" id="date">Date</div>
@@ -126,19 +126,20 @@
             </div>
     
         </div>
+        
 
         <!-- FAVORITES -->
-        <div class="w-100 flex-display-center-sb column g-s p-8-16" style="background-color: var(--neutral_white);">
+        <div class="w-100 flex-display-center-sb column g-s p-8-16">
             <div class="favorites-header w-100 flex-display-center-sb">
-                <div class="favorites-header-text flex baseline g-xs">
+                <div class="favorites-header-text flex baseline g-xs flex-display-center-sb w-100">
                     <div class="favorites-title card-title">YOUR FAVORITES</div>
                     <div class="nr-fav-events muted-text xs-text">0 events</div>
                 </div>
-                <button class="secondary-btn" alt="expand" id="expand-btn" onclick="expandFav()">expand</button>
+                <!-- <button class="secondary-btn" alt="expand" id="expand-btn" onclick="expandFav()">collapse</button> -->
             </div>
             <div class="favorites-events-content overflow-y w-100 flex-display-center-center column g-s">
                 <div class="placebo flex-display-center-center h-100 w-100">
-                    <div class="fav-disclaimer medium m-text muted-text flex-display-center-center">There are no events bookmarked as favorite at the moment. Saved events will appear here.</div>
+                    <div class="fav-disclaimer medium s-text muted-text flex-display-center-center">There are no events bookmarked as favorite at the moment. Saved events will appear here.</div>
                 </div>
             </div>
             <div class="no-sync-disclaimer w-100 flex-display-start-center g-xs">
@@ -147,11 +148,13 @@
             </div>
         </div>
 
+        <!-- <div class="divider-h"></div> -->
+
         <!-- ALL EVENTS -->
-        <div class="w-100 flex-display-center-sb column g-s p-16" style="background-color: var(--violet);">
+        <div class="w-100 flex-display-center-sb column g-s p-8-16">
             <div class="favorites-header w-100 flex-display-center-sb">
-                <div class="favorites-header-text flex baseline g-xs">
-                    <div class="favorites-title card-title">ALL EVENTS</div>
+                <div class="favorites-header-text flex baseline g-xs flex-display-center-sb w-100">
+                    <div class="favorites-title card-title">ALL EVENTS OF FUORISALONE</div>
                     <div class="nr-all-events muted-text xs-text"></div>
                 </div>
             </div>
