--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/about.css">
     <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
-    <title>I migliori eventi del fuorisalone 2024</title>
+    <title>About</title>
 </head>
 <body>
     <div class="topnav hidden-nav flex-display-center-sb">
