--- a/list.html
+++ b/list.html
@@ -8,7 +8,7 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet'/>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
-    <title>I migliori eventi del fuorisalone 2024</title>
+    <title>Guida fuorisalone 2025 :)</title>
 </head>
 <body>
     <div class="topnav hidden-nav flex-display-center-sb">
@@ -17,10 +17,10 @@
     </div>
 
     <div class="ui-elements-container z-10 flex-display-center-start column g-s" style="background-color: var(--violet);">
-        <div class="filter-button-container z-10 flex-display-center-center g-m">
+        <!-- <div class="filter-button-container z-10 flex-display-center-center g-m">
             <div class="filter-btn filter-event-type pill pointer flex-display-center-center" id="event-type">Event category</div>
             <div class="filter-btn filter-date pill pointer flex-display-center-center" id="date">Date</div>
-        </div>
+        </div> -->
 
         <!-- EVENT TYPE FILTER -->
         <div class="filter-card-container z-10 flex column g-l hidden" id="event-type-filter">
@@ -177,16 +177,28 @@
                             <div class="date-divider-line"></div>
                         </div>
                     </div>
-
-                    <!-- <div class="date-divider xs-text muted-text w-100 flex-display-center-center g-xs baseline" value="17/04/2024">
-                        17 April 2024
-                        <div class="date-divider-line"></div>
+                   
+                    <div class="date-card-container flex column g-s">
+                        <div class="date-divider xs-text muted-text w-100 flex-display-center-center g-xs baseline" value="18/04/2024">
+                            18 April 2024
+                            <div class="date-divider-line"></div>
+                        </div>
+                    </div>
+                    
+                    <div class="date-card-container flex column g-s">
+                        <div class="date-divider xs-text muted-text w-100 flex-display-center-center g-xs baseline" value="19/04/2024">
+                            19 April 2024
+                            <div class="date-divider-line"></div>
+                        </div>
                     </div>
 
-                    <div class="date-divider xs-text muted-text w-100 flex-display-center-center g-xs baseline" value="18/04/2024">
-                        18 April 2024
-                        <div class="date-divider-line"></div>
-                    </div> -->
+                    <div class="date-card-container flex column g-s">
+                        <div class="date-divider xs-text muted-text w-100 flex-display-center-center g-xs baseline" value="20/04/2024">
+                            20 April 2024
+                            <div class="date-divider-line"></div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
