height dvh introduced

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 
-    <div class="ui-elements-container z-10 vh-100 no-pointer">
+    <div class="ui-elements-container z-10 dvh-100 no-pointer">
         <div class="filter-button-container z-10 flex-display-center-sb g-m">
             <div class="flex-display-center-center g-m">
                 <div class="filter-btn filter-event-type pill pointer flex-display-center-center" id="event-type">Event category</div>
